<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.Fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@mipmap/profile_header">


            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:elevation="4dp"
                app:cardBackgroundColor="@color/orangeActive"
                app:cardCornerRadius="50dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="46dp">

                    <ImageView
                        android:id="@+id/profile_fragment_profile_photo_iv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_launcher" />
                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profile_fragment_username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:text="@string/user_name"
                android:textColor="@color/grayDeActive" />
        </RelativeLayout>


        <!--        bala ro hanooz nasakhtam-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/profile_fragment_user_first_name_tv"
                    style="@style/ProfileFragmentUserTitleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="mamad"
                    android:textColor="@color/grayDeActive" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <TextView
                    android:id="@+id/profile_fragment_first_name_tv"
                    style="@style/ProfileFragmentTitleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/first_name"
                    android:textColor="@color/grayDeActive" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

<!--                <TextView-->
<!--                    android:id="@+id/profile_fragment_user_last_name_tv"-->
<!--                    style="@style/ProfileFragmentUserTitleTV"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentRight="true"-->
<!--                    android:text="mamad"-->
<!--                    android:textColor="@color/grayDeActive" />-->

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

<!--                <TextView-->
<!--                    android:id="@+id/profile_fragment_last_name_tv"-->
<!--                    style="@style/ProfileFragmentTitleTV"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentLeft="true"-->
<!--                    android:text="@string/last_name"-->
<!--                    android:textColor="@color/grayDeActive" />-->

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/profile_fragment_user_email_tv"
                    style="@style/ProfileFragmentUserTitleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="mamad"
                    android:textColor="@color/grayDeActive" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <TextView
                    android:id="@+id/profile_fragment_email_tv"
                    style="@style/ProfileFragmentTitleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/email"
                    android:textColor="@color/grayDeActive" />

            </RelativeLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/profile_fragment_white_space"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/orangeActive"
            app:cardCornerRadius="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp">

                <Button
                    android:id="@+id/profile_fragment_profile_edit_btn"
                    style="@style/ProfileFragmentEditProfileBTN"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@android:color/transparent"
                    android:text="@string/edit_profile"
                    android:textColor="@color/grayDeActive" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp">


            <Button
                android:id="@+id/profile_fragment_sign_out_btn"
                style="@style/ProfileFragmentSignOutBTN"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@android:color/transparent"
                android:shadowColor="@android:color/transparent"
                android:text="@string/sign_out_account"
                android:textColor="@color/grayDeActive" />


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</FrameLayout>